--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -62,9 +62,9 @@
 /* #Typography
 ================================================== */
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 300; }
+		font-weight: 600; }
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-	h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
+	h1 { font-size: 64px; line-height: 50px; margin-bottom: 14px;}
 	h2 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
 	h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
 	h4 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
@@ -267,14 +267,14 @@
   ================================================== */
 
 
-.highlighttable {
+.highlight {
   color: #f8f8f2;
   table-layout: fixed;
   white-space: nowrap;
   width:90%;
 }
 
-.highlighttable pre, .highlighttable code { display:block; margin:0; padding:0; background: none; overflow:auto; word-wrap: normal; }
+.highlight pre, .highlight code { display:block; margin:0; padding:0; background: none; overflow:auto; word-wrap: normal; }
 
 .highlight, .linenodiv {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQIHWPQ1dU1BgABzQC7XXMTYQAAAABJRU5ErkJggg==);
@@ -282,11 +282,11 @@
   padding: 10px;
   margin-bottom:20px;
 }
-.linenodiv, .lineno { color: #ccc; }
+.gutter, .lineno { color: #ccc; }
 
-td.linenos { width: 40px; }
+td.gl { width: 40px; }
 
-.linenodiv {
+.gutter {
   border-right: none;
   padding: 10px;
   text-align: right;
